<resources>
    <string name="app_name">ShowStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Welcome to Shoe Store</string>
    <string name="instruction">ON NEXT PAGE PRESS ADD SHOE BUTTON TO ADD A SHOE TO YOUR LIST.</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="go_to_instruction">Go to instruction</string>
    <string name="go_to_list">Go to List</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_model">Shoe Model</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_color">Shoe Color</string>
    <string name="enter_your_thought">Enter your thought</string>
    <string name="shoe_descriptions">Shoe Descriptions:   </string>
    <string name="enter_color">Enter color</string>
    <string name="enter_size">Enter size</string>
    <string name="enter_model">Enter model</string>
    <string name="number">1</string>
</resources>